--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,12 +30,8 @@ jobs:
           plugin_activity_limit: 5
 
           # Languages
-          plugin_languages: yes
-          plugin_languages_ignored_repos: codingstudentJan
-          plugin_languages_ignored: html, css
-          plugin_languages_limit: 8
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_sections: most-used
+          plugin_languages: no
+
 
           # Repos
           repositories_forks: no
